Build in support for minified css

--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -23,7 +23,9 @@
  */
 
 /*
- * Do any custom styling in this file.
+ * Do any custom styling in this file. For performance reasons, it is
+ * recommended you minify the css using a minifier like yui-compressor
+ * and write to style.min.css, overwriting the symlink.
  */
 
 body {
